# datacite

./: .coveragerc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  docker-compose.yml  pytest.ini  run-tests-pw.sh  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: github-release.yml  pypi-release.yml  tests.yml
datacite/: __init__.py  _compat.py  client.py  errors.py  jsonutils.py  request.py  rest_client.py  schema31.py  schema40.py  schema41.py  schema42.py  schema43.py  schema45.py  schema46.py  transformation.py  version.py  xmlutils.py
datacite/schema/: datacite-v3.1.jsonschema  ietf-bcp-47.jsonschema  iso-8601.jsonschema
datacite/schemas/: datacite-v3.1.json  datacite-v4.0.json  datacite-v4.1.json  datacite-v4.2.json  datacite-v4.3.json  datacite-v4.5.json  datacite-v4.6.json  ietf-bcp-47.json  iso-8601.json
docs/: Makefile  conf.py  index.rst
tests/: conftest.py  helpers.py  httpretty_mock.py  rest_helpers.py  test_client.py  test_doi_get.py  test_doi_post.py  test_example.py  test_media_get.py  test_media_post.py  test_metadata_delete.py  test_metadata_get.py  test_metadata_post.py  test_rest.py  test_schema31.py  test_schema40.py  test_schema41.py  test_schema42.py  test_schema43.py  test_schema45.py  test_schema46.py  test_transformation.py
tests/data/: datacite-v3.1-full-example.json  datacite-v3.1-full-example.xml  datacite-v4.0-full-example.json  datacite-v4.0-full-example.xml  datacite-v4.1-full-example.json  datacite-v4.1-full-example.xml  datacite-v4.2-full-example.json  datacite-v4.2-full-example.xml  datacite-v4.3-full-example.json  datacite-v4.3-full-example.xml  datacite-v4.5-full-example.json  (+5 more)
(+82 files in other folders)
