# This file is part of DataCite.
#
# Copyright (C) 2015, 2016 CERN.
# Copyright (C) 2024, California Institute of Technology
#
# DataCite is free software; you can redistribute it and/or modify it
# under the terms of the Revised BSD License; see LICENSE file for
# more details.

[metadata]
name = datacite
license= BSD 
version = attr: datacite.__version__
description = "A Python client for DataCite MDS and REST APIs."
long_description = file: README.rst, CHANGES.rst
keywords = datacite doi
author = Invenio Collaboration
author_email = info@inveniosoftware.org
url = https://github.com/inveniosoftware/datacite
classifiers = 
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
zip_safe = False
python_requires = >=3.9
install_requires = 
    jsonschema>=3.0.0
    lxml>=4.5.2
    requests>=2.12.2
    idutils>=1.0.0
    importlib-metadata>=6.11.0

[options.extras_require]
tests =
    responses>=0.10.6
    mock>=1.3.0
    pytest-invenio>=1.4.0
    pytest-black-ng>=0.4.0
    datacite[docs]
docs = Sphinx>=4.5.0
all = datacite[tests]

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=datacite --cov-report=term-missing
testpaths = docs tests datacite
norecursedirs = tests/example
markers = pw: tests that require a password (will only run with '--runpw' option)
